--- a/.github/workflows/make.yml
+++ b/.github/workflows/make.yml
@@ -3,10 +3,10 @@ name: Make tun-doc Pull Request
 on: [workflow_dispatch]
 
 env:
-  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
 permissions:
-  contents: read
+  contents: write
   pull-requests: write
   
 jobs:
@@ -20,20 +20,21 @@ jobs:
         env:
           TZ: 'Asia/Tokyo'
         run: |
-          current_datetime=$( data +'%Y%m%d%H%M%S' )
+          current_datetime=$( date +'%Y%m%d%H%M%S' )
           echo "BRANCH_NAME=tundoc_${current_datetime}" >> $GITHUB_ENV
 
       - name: Create New Branch
-        run:
+        run: |
           git switch -c ${{ env.BRANCH_NAME }}
           git push -u origin ${{ env.BRANCH_NAME }}
 
       - name: Update
         run: |
           chmod -R 700 lib
-          lib/make.sh > .message.md
+          lib/make.sh > message.md
+          git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git config --local user.name "github-actions[bot]"
           git add .tun-doc/*
           git commit -m 'update tundoc'
-          gh pr create --fill -B ${{ env.BASE_BRANCH }} --body-file .message.md
-        with:
-          branch: ${{ env.BRANCH_NAME }}
+          git push origin ${{ env.BRANCH_NAME }}
+          gh pr create -B "main" --title "積ん読" --body-file "message.md"
