--- a/.github/workflows/make.yml
+++ b/.github/workflows/make.yml
@@ -6,8 +6,8 @@ env:
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
 permissions:
-  contents: read
-  pull-requests: write
+  contents: read|write
+  pull-requests: read|write
   
 jobs:
   build:
