--- a/.github/workflows/make.yml
+++ b/.github/workflows/make.yml
@@ -32,6 +32,7 @@ jobs:
         run: |
           chmod -R 700 lib
           lib/make.sh > .message.md
+          git config --local user.email "action@github.com"
           git add .tun-doc/*
           git commit -m 'update tundoc'
           gh pr create --fill -B ${{ env.BASE_BRANCH }} --body-file .message.md
