--- a/.github/workflows/make.yml
+++ b/.github/workflows/make.yml
@@ -33,6 +33,7 @@ jobs:
           chmod -R 700 lib
           lib/make.sh > .message.md
           git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git config --local user.name "github-actions[bot]"
           git add .tun-doc/*
           git commit -m 'update tundoc'
           gh pr create --fill -B ${{ env.BASE_BRANCH }} --body-file .message.md
