--- a/.github/workflows/make.yml
+++ b/.github/workflows/make.yml
@@ -31,9 +31,9 @@ jobs:
       - name: Update
         run: |
           chmod -R 700 lib
-          lib/make.sh > .message.md
+          lib/make.sh > message.md
           git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
           git add .tun-doc/*
           git commit -m 'update tundoc'
-          gh pr create --fill -B ${{ env.BASE_BRANCH }} --body-file .message.md
+          gh pr create -B ${{ env.BASE_BRANCH }} --body-file message.md
